fix the width on mobile for a quote

--- a/css/contact.css
+++ b/css/contact.css
@@ -121,4 +121,8 @@ section.social .icons i {
     div.authors figure {
         max-width: 9rem;
     }
+
+    section.contact-form {
+        width: 95%;
+    }
 }
